[package]
name = "day-3"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ahash = "0.8"
derive_more = { version = "1.0", features = ["is_variant"] }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "day-3-bench"
path = "benches/benchmarks.rs"
harness = false
