[package]
name = "day-7"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rayon = { workspace = true }
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "sync"] }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "day-7-bench"
path = "benches/benchmarks.rs"
harness = false
